# Agent-Identity

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DAY5-6-COMPLETE.md  FRONTEND_STRUCTURE.md  README.md  SECURITY.md  docker-compose.yml  fix_permissions.sql  package.json  render.yaml  test-login.html
.claude/: PHASE4_PLAN.md  PHASE4_RESULTS.md  V0.5_RELEASE_GUIDE.md  WEBSITE_UPDATES_V0.5.md
.do/: app.yaml
agentauth/: .dockerignore  .env.example  .gitignore  .railwayignore  CHANGELOG.md  DIAGNOSTIC.sql  Dockerfile  FIXES_SUMMARY.md  LOGGING.md  MIGRATION.sql  MIGRATION_GUIDE.md  MIGRATION_SAFE.sql  README.md  REFACTORING.md  SCOPED_PERMISSIONS.md  VERIFY_DATABASE.sql  VISUAL_GUIDE.txt  index.js  jest.config.js  package-lock.json  package.json  railway.json  schema.sql  server.js  server.old.js  test.js
agentauth-cli/: .gitignore  .npmignore  LICENSE  README.md  package.json  tsconfig.json
agentauth-dashboard/: .dockerignore  .env.example  .env.production  DEPLOYMENT.md  Dockerfile  README.md  SENTRY.md  index.html  nginx.conf  package.json  railway.json  tailwind.config.js  vite.config.ts  vitest.config.ts
agentauth-sdk/: .npmignore  CHANGELOG.md  DAY1-2-COMPLETE.md  README.md  package.json  test-sdk.js  tsconfig.json
agentauth-sdk-python/: DAY3-4-COMPLETE.md  README.md  pyproject.toml
agentauth-sdk-python/agentauth_sdk/: __init__.py  client.py  permissions.py  types.py  utils.py
agentauth-sdk-python/examples/: basic_usage.py  fastapi_example.py
agentauth-sdk-python/umytbaynazarow_agentauth_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agentauth:branding/: visualbranding.html
docs/: api-reference.md  incidents.md  index.md  openapi.yaml  sla.md  status-page-setup.md  zkp-proof-guide.md
public/: githubsocial.html  index.html  index.html.backup
(+137 files in other folders)
