[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "umytbaynazarow-agentauth-sdk"
version = "0.7.0"
description = "Lightweight, type-safe Python SDK for AgentAuth - Authentication for AI Agents"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "umytbaynazarov-coder", email = "umytappleb7@icloud.com"}
]
keywords = ["authentication", "auth", "ai-agents", "jwt", "api-key", "async", "httpx"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.24.0",
    "typing-extensions>=4.5.0; python_version<'3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/umytbaynazarov-coder/Agent-Identity"
Documentation = "https://docs.agentauth.dev"
Repository = "https://github.com/umytbaynazarov-coder/Agent-Identity"
Issues = "https://github.com/umytbaynazarov-coder/Agent-Identity/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentauth_sdk*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py38"
